fix wrapping of longish names in scores submitted screen

--- a/src/styles/scoresSubmitted.less
+++ b/src/styles/scoresSubmitted.less
@@ -1,7 +1,7 @@
 @import "bootstrap.variables.less";
 
 .scores-submitted {
-	.row { width: 250px; margin-left: auto; margin-right: auto; }
+	.row { width: 300px; margin-left: auto; margin-right: auto; }
 	.score { text-align: right; }
 	.positive { color: @brand-success; }
 	.negative { color: @brand-danger; }
